Add endpoint to get all tags
